# DynSLAM

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  itm-sample-calib-from-kitti-odometry-sequence-06.txt  print-todos.sh  replication-notes.txt
cmake/: FindEigen3.cmake  Utils.cmake
notebooks/: DepthAnalysis.ipynb  Pretty Depth Maps.ipynb  Reduced Framerate Results.ipynb  StaticAndDynamicDepthAnalysis.ipynb  StaticDepthAnalysis.ipynb  TrackingSeqDepthAnalysis.ipynb  Tracklet Analysis.ipynb  Voxel GC Stats.ipynb
raw-data-archives/: README.md
scripts/: decay_exp.sh  download_kitti_tracking.py  install_cmake.sh  lowfreq_exp.sh  odo_basic_exp.sh  plot_depth.py  prepare-odometry.sh  preprocess-sequence.sh  recent_todos.sh  requirements.txt  run_tidy.sh  scale_sequence.py  shrink-video.sh  tracking_basic_exp.sh  utils.sh.inc
src/DynSLAM/: DSHandler3D.cpp  DSHandler3D.h  Defines.h  DepthEngine.h  DepthProvider.h  DynSLAM.cpp  DynSLAMGUI.cpp  DynSLAMGUI_GL.cpp  DynSlam.cpp  DynSlam.h  ImageSourceEngine.cpp  ImageSourceEngine.h  InfiniTamDriver.cpp  InfiniTamDriver.h  Input.cpp  Input.h  PrecomputedDepthEngine.cpp  PrecomputedDepthEngine.h  PrecomputedDepthProvider.cpp  PrecomputedDepthProvider.h  PreviewType.h  Utils.cpp  Utils.h  VoxelDecayParams.h
src/DynSLAM/Direct/: README.md  cameraBase.h  commDefs.h  cudaDefs.h  helperFunctions.cpp  helperFunctions.hpp  pinholeCameraModel.cpp  pinholeCameraModel.h
src/DynSLAM/Direct/feature/: feature_depthMap.cpp  feature_depthMap.h
src/DynSLAM/Direct/frame/: frame.cpp  frame.h  frame.hpp  multiFrames.cpp  multiFrames.h
src/DynSLAM/Direct/frame/device/cpu/: frame_cpu.cpp  frame_cpu.h
src/DynSLAM/Direct/frame/device/cuda/: frame_cuda.cu  frame_cuda.h
src/DynSLAM/Direct/image_alignment/: dirImgAlignBase.cpp  dirImgAlignBase.h
src/DynSLAM/Direct/image_alignment/device/cpu/: dirImgAlignCPU.cpp  dirImgAlignCPU.h
src/DynSLAM/Direct/math/: MathUtils.h  Matrix.h  Vector.h
src/DynSLAM/Direct/robustLoss/: pseudoHuberLoss.cpp  pseudoHuberLoss.h  robustLossBase.h  tDistributionLoss.cpp  tDistributionLoss.h
src/DynSLAM/Direct/transformation/: transformation.cpp  transformation.h
src/DynSLAM/Evaluation/: CsvWriter.cpp  CsvWriter.h  ErrorVisualizationCallback.cpp  ErrorVisualizationCallback.h  Evaluation.cpp  Evaluation.h  EvaluationCallback.cpp  EvaluationCallback.h  ILidarEvalCallback.h  Records.h  SegmentedCallback.cpp  SegmentedCallback.h  SegmentedEvaluationCallback.cpp  SegmentedEvaluationCallback.h  SegmentedVisualizationCallback.cpp  SegmentedVisualizationCallback.h  Tracklets.cpp  Tracklets.h  Velodyne.cpp  Velodyne.h  VelodyneIO.cpp  VelodyneIO.h
src/DynSLAM/InstRecLib/: CMakeLists.txt  ChunkManager.cpp  ChunkManager.h  InstanceReconstructor.cpp  InstanceReconstructor.h  InstanceSegmentationResult.cpp  InstanceSegmentationResult.h  InstanceTracker.cpp  InstanceTracker.h  InstanceView.cpp  InstanceView.h  PrecomputedSegmentationProvider.cpp  PrecomputedSegmentationProvider.h  README.md  SegmentationDataset.cpp  SegmentationDataset.h  SegmentationProvider.cpp  SegmentationProvider.h  SparseSFProvider.cpp  SparseSFProvider.h  TODO.md  Track.cpp  Track.h  VisoSparseSFProvider.cpp  VisoSparseSFProvider.h
src/DynSLAM/InstRecLib/Utils/: BoundingBox.cpp  BoundingBox.h  Mask.cpp  Mask.h
